# template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  init_project.py  pyproject.toml
.github/workflows/: quality.yml
